fixed the feedback padding and also the buttons are aligned in middle

--- a/frontend/src/css/markascreated.css
+++ b/frontend/src/css/markascreated.css
@@ -52,6 +52,11 @@ body {
     border: 1px solid #0a02a1;
     border-radius: 4px;
   }
+  .button-con {
+    align-items: center;
+    text-align: center;
+    padding-bottom: 20px;
+  }
   
   
   /* Responsive layout for smaller screens */
@@ -68,5 +73,6 @@ body {
     button {
       width: 180px;
     }
+
   }
   
